<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="test" Id="{95e1cae2-87d0-4599-82d5-c1b8ad3965db}">
    <Declaration><![CDATA[TYPE test :
STRUCT
	dbName:STRING(50);
	dbID:UINT;
	dbtable:STRING(50);
	excelColName:STRING(50);
	excelcol:INT;
	connector:STRING(50);
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>